<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ListPreference
		android:key="theme"
		android:title="@string/pref_theme"
		app:useSimpleSummaryProvider="true"
		android:entries="@array/theme_choices_entries"
		android:entryValues="@array/theme_choices_entryvalues"
		android:defaultValue="light"
		android:dialogTitle="@string/pref_theme_dialog"
		android:iconSpaceReserved="false"
	/>

	<CheckBoxPreference
		android:iconSpaceReserved="false"
		android:key="soundsEnabled"
		android:title="@string/pref_sounds" />

	<!-- The default value of "duckduckgo" is a legacy option which means "Online source" -->
	<ListPreference
		android:key="definitionProvider"
		android:title="@string/pref_definitionProvider"
		android:summary="@string/pref_definitionProvider_summary"
		android:entries="@array/definition_provider_choices_entries"
		android:entryValues="@array/definition_provider_choices_entryvalues"
		android:defaultValue="duckduckgo"
		android:dialogTitle="@string/pref_definitionProvider_dialog"
		android:iconSpaceReserved="false"
	/>
	<PreferenceScreen
		android:iconSpaceReserved="false"
		android:key="resetScores"
		android:title="@string/pref_resetScores" />

</PreferenceScreen>
