<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:fancy="http://schemas.android.com/apk/res-auto"
	android:background="?attr/home__background_colour"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="?attr/actionBarTheme"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:elevation="4dp"
		app:title="@string/multiplayer" />

	<com.serwylo.lexica.view.GameDetailsView
		android:id="@+id/game_mode_details"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/toolbar"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<TextView
		android:id="@+id/text_to_join"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/start_game"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_margin="8dp"
		android:textAlignment="center"
		android:textColor="?attr/game__score__heading_text_colour"
		android:text="@string/multiplayer_lobby__join_when_ready" />

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/start_game"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:paddingTop="?attr/home__button_padding"
		android:paddingBottom="?attr/home__button_padding"
		fancy:fb_defaultColor="?attr/home__secondary_button_background"
		fancy:fb_borderWidth="2dp"
		fancy:fb_borderColor="?attr/home__secondary_button_border"
		fancy:fb_focusColor="?attr/home__secondary_button_background_focused"
		fancy:fb_fontIconResource="&#xf144;"
		fancy:fb_fontIconSize="28sp"
		fancy:fb_iconPosition="left"
		fancy:fb_text="@string/multiplayer_lobby__join_game"
		fancy:fb_textSize="28sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
