<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:fancy="http://schemas.android.com/apk/res-auto"
	android:background="?attr/home__background_colour"
	android:orientation="vertical">

	<!--

	Share invites via SMS/Email/etc.

	Share invites via QR Code.
	 - Large, takes a lot of space.
	 - Shares the same info as would be sent via SMS / Email / etc.

	Share invites via NFC.
	 - No UI explicitly required, can happen passively in the background.
	 - However, need to give some sort of affordance that it is a possibility.
	 - As with QR, shares the same info as would be sent via SMS / Email / etc.

	Share a link to F-Droid in the Play Store / F-Droid.
	 - Sharing a link via NFC / QR / SMS / Email / etc will only work for those who have F-Droid installed.
	 - This is because it will use a lexica://... URI, which is meaningless without the app installed.
	 - Therefore, we need a way to offer a link to such users so they can get it.

	Share the contents of the board in a way that can be played offline.
	 - If you want to play with someone that doesn't have an Android phone, then share something that can be played with a pen and paper.
	 - Obviously they wont have a dictionary built in the same way that the game does, but it should suffice.
	 - They could even double check their letters at the end of the game using the "Missed words" screen on your phone.

	-->

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="?attr/actionBarTheme"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:elevation="4dp"
		app:title="@string/multiplayer" />

	<com.serwylo.lexica.view.GameDetailsView
		android:id="@+id/game_mode_details"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@id/toolbar"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<TextView
		android:id="@+id/multiplayer_game_num_available_words"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		tools:text="265 words (tap to refresh)"
		android:textAlignment="center"
		android:textColor="?attr/game__score__heading_text_colour"
		android:padding="?attr/game__score__padding"
		app:layout_constraintTop_toBottomOf="@id/game_mode_details"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/send_invite"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/multiplayer_game_num_available_words"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="?attr/game__score__padding"
		android:layout_marginEnd="?attr/game__score__padding"
		android:layout_marginStart="?attr/game__score__padding"

		android:text="@string/multiplayer__share_invites"

		app:icon="@drawable/ic_share"
		app:iconGravity="textStart"
		app:iconTint="?attr/home__secondary_button_text_colour"
		app:iconSize="24dp"
		android:textAllCaps="false"
		app:cornerRadius="12dp"
		app:iconPadding="8dp"
		android:paddingStart="8dp"
		android:paddingEnd="8dp"
		app:backgroundTint="?attr/home__secondary_button_background"
		android:textColor="?attr/home__secondary_button_text_colour" />

	<TextView
		android:id="@+id/android_app_tag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/multiplayer__toggle_qr_app"
		android:textAlignment="center"
		android:textColor="?attr/game__score__heading_text_colour"
		app:layout_constraintTop_toBottomOf="@id/send_invite"
		app:layout_constraintBottom_toBottomOf="@id/toggle_qr"
		app:layout_constraintEnd_toStartOf="@id/toggle_qr" />

	<androidx.appcompat.widget.SwitchCompat
		android:id="@+id/toggle_qr"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/send_invite"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/web_app_tag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/multiplayer__toggle_qr_web"
		android:textAlignment="center"
		android:textColor="?attr/game__score__heading_text_colour"
		app:layout_constraintTop_toBottomOf="@id/send_invite"
		app:layout_constraintBottom_toBottomOf="@id/toggle_qr"
		app:layout_constraintStart_toEndOf="@id/toggle_qr" />

	<ImageView
		android:id="@+id/qr"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="12dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="12dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/multiplayer__qr_code__accessible_description"
		app:layout_constraintBottom_toTopOf="@id/text_start"
		app:layout_constraintDimensionRatio="1:1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/toggle_qr"
		app:layout_constraintVertical_bias="0.0"
		tools:src="@tools:sample/avatars" />

	<TextView
		android:id="@+id/text_start"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/multiplayer__start_when_ready"
		android:textAlignment="center"
		android:textColor="?attr/game__score__heading_text_colour"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toTopOf="@id/start_game"
		tools:layout_editor_absoluteY="558dp" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/start_game"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:paddingTop="?attr/home__button_padding"
		android:paddingBottom="?attr/home__button_padding"
		android:stateListAnimator="@null"
		app:backgroundTint="?attr/home__secondary_button_background"
		android:textAllCaps="false"
		app:cornerRadius="0dp"
		android:insetTop="0dp"
		android:insetBottom="0dp"
		app:strokeWidth="2dp"
		app:strokeColor="?attr/home__secondary_button_border"
		app:icon="@drawable/circle_play_solid"
		app:iconTint="@color/white"
		app:iconSize="28dp"
		app:iconGravity="textStart"
		android:text="@string/multiplayer__start_game"
		android:textColor="@color/white"
		android:textSize="28sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
