<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:fancy="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="?attr/home__background_colour"
	android:orientation="vertical">

	<TextView
		android:id="@+id/high_score_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="?attr/game__score__heading_text_size"
		android:textColor="?attr/game__score__heading_text_colour"
		app:layout_constraintEnd_toEndOf="@id/lexicaLogo"
		app:layout_constraintTop_toTopOf="parent"
		android:paddingTop="?attr/game__score__padding"
		android:paddingEnd="?attr/game__score__padding"
		android:paddingRight="?attr/game__score__padding"
		android:paddingStart="?attr/game__score__padding"
		android:paddingLeft="?attr/game__score__padding"
		tools:text="@string/high_score" />

	<TextView
		android:id="@+id/high_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="?attr/game__score__value_text_size"
		android:textColor="?attr/game__score__text_colour"
		android:paddingEnd="?attr/game__score__padding"
		android:paddingRight="?attr/game__score__padding"
		android:paddingStart="?attr/game__score__padding"
		android:paddingLeft="?attr/game__score__padding"
		app:layout_constraintEnd_toEndOf="@id/high_score_label"
		app:layout_constraintTop_toBottomOf="@id/high_score_label"
		tools:text="35" />

	<com.serwylo.lexica.view.LexicaLogo
		android:id="@+id/lexicaLogo"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/high_score"
		app:layout_constraintBottom_toTopOf="@id/new_game" />

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/new_game"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingTop="?attr/home__button_padding"
		android:paddingBottom="?attr/home__button_padding"
		fancy:fb_iconPosition="left"
		fancy:fb_fontIconResource="&#xf144;"
		fancy:fb_fontIconSize="28sp"
		fancy:fb_textSize="28sp"
		fancy:fb_text="@string/new_game"
		fancy:fb_defaultColor="?attr/home__main_button_background"
		fancy:fb_focusColor="?attr/home__main_button_background__focused"
		app:layout_constraintBottom_toTopOf="@+id/restore_game"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/restore_game"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingTop="?attr/home__button_padding"
		android:paddingBottom="?attr/home__button_padding"
		android:enabled="false"
		fancy:fb_fontIconResource="&#xf021;"
		fancy:fb_fontIconSize="24sp"
		fancy:fb_textSize="18sp"
		fancy:fb_defaultColor="?attr/home__secondary_button_background"
		fancy:fb_focusColor="?attr/home__secondary_button_background_focused"
		fancy:fb_disabledColor="?attr/home__secondary_button_background_focused"
		fancy:fb_text="@string/restore_game"
		fancy:fb_textColor="?attr/home__secondary_button_text_colour"
		fancy:fb_disabledTextColor="?attr/home__secondary_button_text_colour_disabled"
		fancy:fb_iconPosition="top"
		app:layout_constraintWidth_percent="0.34"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/about"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingTop="?attr/home__button_padding"
		android:paddingBottom="?attr/home__button_padding"
		fancy:fb_text="@string/about"
		fancy:fb_fontIconResource="&#xf059;"
		fancy:fb_fontIconSize="24sp"
		fancy:fb_textSize="18sp"
		fancy:fb_defaultColor="?attr/home__secondary_button_background"
		fancy:fb_focusColor="?attr/home__secondary_button_background_focused"
		fancy:fb_textColor="?attr/home__secondary_button_text_colour"
		fancy:fb_iconPosition="top"
		app:layout_constraintWidth_percent="0.34"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@id/restore_game" />

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/preferences"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingTop="?attr/home__button_padding"
		android:paddingBottom="?attr/home__button_padding"
		fancy:fb_text="@string/prefs"
		fancy:fb_fontIconResource="&#xf013;"
		fancy:fb_fontIconSize="24sp"
		fancy:fb_textSize="18sp"
		fancy:fb_defaultColor="?attr/home__secondary_button_background"
		fancy:fb_focusColor="?attr/home__secondary_button_background_focused"
		fancy:fb_textColor="?attr/home__secondary_button_text_colour"
		fancy:fb_iconPosition="top"
		app:layout_constraintWidth_percent="0.34"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/about" />


</androidx.constraintlayout.widget.ConstraintLayout>
